              name (SnapPy does not write these, but some other tools do).
            - Routines retriangulate() and simplifyExhaustive() no longer
              throw an exception when called on an empty triangulation.
            - Routine simplifyExhaustive() now ensures that any change to the
              triangulation happens on the calling thread.
        Class Triangulation<4>:
            - New routine simplifyUpDown(); thanks to Rhuaidi Burke.  The main
              simplify() routine (previously called intelligentSimplify()) now
              incorporates these techniques also.
            - Regarding elementary moves:
              + The (check, perform) variants of fourFourMove(), openBook(),
                collapseEdge(), snapEdge() are all deprecated.  You should now
                call these routines _without_ extra check/perform arguments:
                they will always check for and (if possible) perform the
                relevant moves.  Some of these routines have also been renamed
                as part of this change (see below).
              + The new version of fourFourMove() has a new name: it is
                now move44().  The old deprecated version (with the extra
                check/perform arguments) retains the old name fourFourMove().
              + New routines has44(), hasOpenBook(), hasCollapseEdge(),
                hasSnapEdge() for checking only.
              + New read-only routines with44(), withOpenBook(),
                withCollapseEdge(), withSnapEdge() that (if possible) return
                a new triangulation with the relevant move performed.
            - New routine improveTreewidth().
            - Renamed intelligentSimplify() to simplify().  The old name is
              kept as a deprecated alias.
            - Routine simplify() now takes a progress tracker and supports
              cancellation.
            - Routines retriangulate() and simplifyExhaustive() no longer